2003-03-30 Tomohiro KUBOTA <kubota@debian.org>

	* A patch contributed by Mike Fabian to fix unstability in
	  64 bit platforms, by changing "0" into "NULL".

2003-03-29 Araki Ken <arakiken@users.sf.net>

	* Output cvs revision of ChangeLog by mlterm -v.

2003-03-28 Araki Ken <arakiken@users.sf.net>

	* If a shell exited in a screen, the screen could be closed
	  even if other background ptys left. Fixed.

2003-03-26 Araki Ken <arakiken@users.sf.net>

	* Mlterm died as soon as the shell exited while screen region being selected. Fixed.

2003-03-26 Tomohiro KUBOTA <kubota@debian.org>

	* Updated tool/mlconfig/po/de.po
	  (Thanks to Mike Fabian).

2003-03-25 Tomohiro KUBOTA <kubota@debian.org>

	* Fixed a bug that non-listed colors are not available.
	  (This bug was due to 2003-02-21's oversimplification.)

2003-03-24 Araki Ken <arakiken@users.sf.net>

	* Added -%/--class/app_class option.
	  Fixed the behavior of 'title' and 'name' option.
	  (Thanks to >>283)

2003-03-21 Tomohiro KUBOTA <kubota@debian.org>

	* tool/mlconfig/mc_color.[ch] simplification.
	* Color names are now translatable in mlconfig.
	* Japanese translation of above new translatable items.
	* Encoding change in tool/mlconfig/po/ja.po from UTF-8
	  to EUC-JP for easier editing.

2003-03-20  MINAMI Hirokazu  <minami@lissie.chem.s.u-tokyo.ac.jp>

	* fixed a pixmap cache corruption bug with gdk-pixbuf
	 (Thanks to Kato san and Kubota san)

2003-03-19 Tomohiro KUBOTA <kubota@debian.org>

	* mlconfig to have "save&exit", "apply&exit", "apply", and "cancel"
	  buttons instead of "OK", "apply", and "cancel" buttons.
	  (Thanks to "Nanashi"-san.)
	* Updated "po" (gettext) files for the above modification.

2003-03-16 Tomohiro KUBOTA <kubota@debian.org>

	* mlconfig shows window title of each ptys in pty list.

2003-03-15 Tomohiro KUBOTA <kubota@debian.org>

	* "configure --with-tools --with-scrollbars" didn't compile
	  any tools nor scroll bars.  Now it compiles all tools and
	  scroll bars.
